# rmk

./: README.md  k_04_mini_v3.entlayout
.github/workflows/: build.yml
common/rmk-0.8.2-eh/src/: direct_pin.rs  matrix.rs
common/rmk-main-upstream/: UPSTREAM.md
common/rmk-main-upstream/rmk-config/src/: gen_usb_map.py  keymap.pest
common/rmk-main-upstream/rmk-config/src/default_config/: nrf52810.toml  nrf52832.toml  nrf52833.toml  stm32.toml
common/rmk-main-upstream/rmk-macro/src/codegen/: orchestrator.rs
common/rmk-main-upstream/rmk-macro/src/codegen/split/: peripheral.rs
common/rmk-main-upstream/rmk/src/: host_data.rs  lib.rs
common/rmk-main-upstream/rmk/src/config/: vial.rs
common/rmk-main-upstream/rmk/src/host/via/: mod.rs  vial.rs
common/rmk-main-upstream/rmk/src/input_device/: pointing.rs
common/rmk-main-upstream/rmk/src/split/: driver.rs  mod.rs
docs/docs/main/docs/configuration/: keyboard_device.mdx
examples/use_config/esp32h2_ble/: Cargo.toml
keyboards/imperial44/: Cargo.toml  keyboard.toml
keyboards/imperial44/src/: central.rs  peripheral.rs
keyboards/k03/: Cargo.toml  keyboard.toml
keyboards/k03/src/: battery_nrf.rs
keyboards/k04/: Cargo.toml  README.md  keyboard.toml
keyboards/k04_micro/: Cargo.toml  keyboard.toml
keyboards/k04_micro/src/: deep_sleep.rs
keyboards/k04_mini/: Cargo.toml  build.rs  keyboard.toml
keyboards/k04_mini/src/: central.rs
keyboards/k04_qube/: Cargo.toml  Makefile.toml  README.md  build.rs  keyboard.toml  vial.json
keyboards/k04_qube/docs/known-issues/: battery-dongle-split-message.md
keyboards/k04_qube/src/: battery_nrf.rs  layer_led.rs  layer_names.rs  left.rs  qube.rs  qube_display.rs  right.rs
keyboards/op36/: keyboard.toml
keyboards/op36/src/: central.rs
keyboards/op36_qube/: .gitignore  Cargo.toml  Makefile.toml  README.md  keyboard.toml  vial.json
keyboards/op36_qube/.cargo/: config.toml
keyboards/op36_qube/docs/known-issues/: battery-dongle-split-message.md
keyboards/op36_qube/src/: battery_nrf.rs  qube.rs  qube_display.rs  right.rs
keyboards/trackball_royale/: Cargo.toml  keyboard.toml
keyboards/trackball_royale/src/: battery_nrf.rs  trackball_processor.rs
keyboards/trackball_v30/: Cargo.toml  keyboard.toml
keyboards/trackball_v30/src/: trackball_processor.rs
keyboards/trackball_v31/: Cargo.toml  keyboard.toml
keyboards/trackball_v31/src/: keyboard.rs  trackball_processor.rs
keyboards/velvet/: Cargo.toml  keyboard.toml
keyboards/velvet_ui/: Cargo.toml  keyboard.toml
keyboards/velvet_ui/src/: battery_nrf.rs  central.rs  pointing_mode.rs
rmk/: Cargo.toml
rmk-config/src/: lib.rs
rmk-config/src/default_config/: event_default.toml
rmk-config/src/resolved/: build_constants.rs
rmk-macro/: Cargo.toml
rmk-macro/src/codegen/: action_parser.rs  keyboard_config.rs
rmk/src/: channel.rs  keyboard.rs  state.rs
rmk/src/config/: mod.rs
rmk/src/event/: mod.rs  split.rs
rmk/src/host/via/: keycode_convert.rs
rmk/src/input_device/: pointing.rs
rmk/src/processor/builtin/: ergohaven.rs  mod.rs
rmk/src/split/: peripheral.rs
rmk/src/split/ble/: central.rs
rmk/src/storage/: mod.rs
scripts/: build_k04_matrix.sh
