[package]
name = "k04_qube"
version = "0.1.0"
description = "RMK BLE dongle firmware for Ergohaven K:04 + Qube"
homepage = "https://github.com/ergohaven/rmk"
repository = "https://github.com/ergohaven/rmk"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"
# Bare-metal target has no `test`/`std` — disable auto test harnesses (E0463).
autotests = false
autobenches = false
autoexamples = false

[features]
default = []
# Qube dongle ST7789 UI (only for --bin qube)
qube = [
    "rmk/st7789",
    "dep:lcd-async",
    "dep:embedded-hal-bus",
    "dep:embedded-graphics",
    "dep:rmk-types",
]

[dependencies]
rmk = { path = "../../rmk", default-features = false, features = [
    "usb_log",
    "storage",
    "vial",
    "nrf52840_ble",
    "split",
    "async_matrix",
    "adafruit_bl",
    # Same SplitMessage layout as qube (display feature) so battery events decode.
    "display",
] }
embedded-hal-bus = { version = "0.3", features = ["async"], optional = true }
embedded-graphics = { version = "0.8", optional = true }
lcd-async = { version = "0.1", optional = true }
rmk-types = { path = "../../rmk-types", optional = true }
heapless = "0.9"
embassy-futures = "0.1"
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "abe49d22ebfc85fae134eb082fbfddf752016a55", features = [
    "defmt",
    "peripheral",
    "central",
    "nrf52840",
] }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "abe49d22ebfc85fae134eb082fbfddf752016a55", features = [
    "defmt",
    "critical-section-impl",
    "nrf52840",
] }
bt-hci = { version = "0.9", default-features = false, features = ["defmt"] }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.11", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
    "time",
] }
embassy-executor = { version = "0.10", features = [
    "defmt",
    "platform-cortex-m",
    "executor-thread",
] }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2"

rand = { version = "0.8.4", default-features = false }
rand_core = { version = "0.6" }
rand_chacha = { version = "0.3", default-features = false }
embassy-usb-driver = "=0.2.2"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "qube"
path = "src/qube.rs"
required-features = ["qube"]
test = false
bench = false

[[bin]]
name = "left"
path = "src/left.rs"
test = false
bench = false

[[bin]]
name = "right"
path = "src/right.rs"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1
debug = true
opt-level = "z"
overflow-checks = false
lto = "fat"

# Prevent cargo from looking for a workspace above this directory
[workspace]
members = ["."]
