[package]
name = "trackball_v31"
version = "0.1.0"
description = "RMK BLE firmware for Ergohaven Trackball (nRF52840)"
homepage = "https://github.com/Yurii-Q/rmk-keyboards"
repository = "https://github.com/Yurii-Q/rmk-keyboards"
edition = "2021"
license = "MIT OR Apache-2.0"
autotests = false
autobenches = false
autoexamples = false

[features]
default = []

[dependencies]
rmk = { path = "../../rmk", default-features = false, features = [
    "usb_log",
    "storage",
    "vial",
    "nrf52840_ble",
    "async_matrix",
    "adafruit_bl",
] }
embassy-futures = "0.1"
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "abe49d22ebfc85fae134eb082fbfddf752016a55", features = [
    "defmt",
    "peripheral",
    "central",
    "nrf52840",
] }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "abe49d22ebfc85fae134eb082fbfddf752016a55", features = [
    "defmt",
    "critical-section-impl",
    "nrf52840",
] }
bt-hci = { version = "0.9", default-features = false, features = ["defmt"] }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.11", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
    "time",
] }
embassy-executor = { version = "0.10", features = [
    "defmt",
    "platform-cortex-m",
    "executor-thread",
] }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2"
embassy-usb-driver = "=0.2.2"

rand = { version = "0.8.4", default-features = false }
rand_core = { version = "0.6" }
rand_chacha = { version = "0.3", default-features = false }
usbd-hid = "0.10"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "keyboard"
path = "src/keyboard.rs"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = "unwind"

[profile.release]
codegen-units = 1
debug = true
opt-level = "z"
overflow-checks = false
lto = "fat"

[workspace]
members = ["."]
